@@ -42,18 +42,11 @@ public:
     ~BookmarkManagerWidget();
 
     BookmarkTreeView * treeView();
-protected slots:
-    
-     /**
-     * Notify widget that the text in the search edit has changed.
-     * @param filter The new text in the search widget.
-     */
-    void slotFilterChanged( const QString &filter );
-    
+
 private:
 
     QToolBar * m_toolBar;
-    Amarok::LineEdit * m_searchEdit; 
+    Amarok::LineEdit * m_searchEdit;
     BookmarkTreeView * m_bookmarkView;
 
     int m_currentBookmarkId;
